--- a/conf/application.conf
+++ b/conf/application.conf
@@ -6,3 +6,6 @@ akka {
   loglevel = "DEBUG"
   logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
 }
+
+play.filters.enabled=[]
+play.http.secret.key="change-me"
